# sign-language-classification

./: .gitignore  README.md  dataset.py  pyproject.toml  sts.py  trie.py  webcrawl.py
datamining/clean/: dictionary.csv
datamining/clean/StS/: metadata.csv  metadata.en.gb.csv  metadata.en.us.csv  metadata.es.ar.csv  metadata.es.es.csv  metadata.it.it.csv  metadata.pt.pt.csv
datamining/raw/json/: alimentos-y-bebidas.json  arte-y-entretenimiento.json  ciencia.json  deportes-y-ocio.json  especifico-del-pais.json  estilo-de-vida.json  generalidades.json  geografia-y-viajes.json  informatica-y-tecnologia-moderna.json  lengua-de-signos-para-bebes.json  lengua-de-signos-para-principiantes.json  lenguaje.json  oraciones.json  pedagogia.json  religion.json  salud-y-medicina.json  tecnologia.json  trabajo-social.json
dataset/: load.py
docs/: BOBSL Permission to Use Form (1).docx  Propuesta_TFG_SignLangNet.txt
docs/portadaTFG/: 000_cover.tex
performance/scrapping/: Cargo.toml
performance/scrapping/src/: lib.rs  webcrawler.rs
src/: StS.py
src/dataset/: aug.py
src/performance/scrapping/src/: webcrawler.rs
videos-signos/: hola-cnse16.mov  sangre.mov
