[project]
name = "tfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "marimo>=0.16.3",
    "matplotlib>=3.10.7",
    "maturin>=1.9.4",
    "numpy>=2.3.3",
    "playwright>=1.55.0",
    "polars>=1.35.1",
    "requests>=2.32.5",
    "scrapping",
    "torch>=2.8.0",
]

[tool.uv.sources]
scrapping = { path = "performance/scrapping/target/wheels/scrapping-0.1.0-cp313-cp313-macosx_11_0_arm64.whl" }
