[package]
name = "scrapping"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
fxhash = "0.2.1"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
spdlog-rs = "0.5.1"


[dependencies.pyo3]
version = "0.26.0"
features = ["extension-module"]


[package.metadata.maturin]
name = "scrapping"
